// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate should add semi colons 1`] = `
Array [
  ".TestComponent {}
",
  "export { default } from './TestComponent';
",
  "import React from 'react';
import ReactDOM from 'react-dom';
import TestComponent from './TestComponent';

it('renders without crashing', () => {
  const div = document.createElement('div');
  ReactDOM.render(<TestComponent />, div);
});
",
  "import React, { Component } from 'react';
import './TestComponent.css';

class TestComponent extends Component {
  state = {};

  render() {
    return (
      <div className=\\"TestComponent\\"></div>
    );
  }
}

export default TestComponent;
",
]
`;

exports[`generate should change css extension 1`] = `
".T {}
"
`;

exports[`generate should fail if component already exists 1`] = `"Component Test already exists at ./src/components/Test"`;

exports[`generate should generate a component with default config 1`] = `"TestComponent"`;

exports[`generate should generate a component with default config 2`] = `
Array [
  ".TestComponent {}
",
  "export { default } from './TestComponent';
",
  "import React from 'react';
import ReactDOM from 'react-dom';
import TestComponent from './TestComponent';

it('renders without crashing', () => {
  const div = document.createElement('div');
  ReactDOM.render(<TestComponent />, div);
});
",
  "import React, { Component } from 'react';
import './TestComponent.css';

class TestComponent extends Component {
  state = {};

  render() {
    return (
      <div className=\\"TestComponent\\"></div>
    );
  }
}

export default TestComponent;
",
]
`;

exports[`generate should generate functional components 1`] = `
"import React from 'react';
import './TestComponent.css';

const TestComponent = ({}) => (
  <div className=\\"TestComponent\\"></div>
);

export default TestComponent;
"
`;

exports[`generate should use flow type 1`] = `
Array [
  "// @flow

export { default } from './T';
",
  "// @flow

import React from 'react';
import ReactDOM from 'react-dom';
import T from './T';

it('renders without crashing', () => {
  const div = document.createElement('div');
  ReactDOM.render(<T />, div);
});
",
  "// @flow

import React, { Component } from 'react';
import './T.css';

class T extends Component {
  state = {};

  render() {
    return (
      <div className=\\"T\\"></div>
    );
  }
}

export default T;
",
]
`;

exports[`generate should use typescript 1`] = `
Array [
  "export { default } from './T';
",
  "import * as React from 'react';
import * as ReactDOM from 'react-dom';
import T from './T';

it('renders without crashing', () => {
  const div = document.createElement('div');
  ReactDOM.render(<T />, div);
});
",
  "import * as React from 'react';
import './T.css';

class T extends React.Component<{}, {}> {
  public state = {};

  public render() {
    return (
      <div className=\\"T\\" />
    );
  }
}

export default T;
",
]
`;
